latest changes on animations

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 
    
-    <header>
+    <header class="rotate-center">
 
         <!--  <div>
             <img src="images/linked in.jpg" alt="" height="100px">
@@ -35,9 +35,9 @@
         </div>
     </header>
 
-    <div class="navbar">
-        <div class="navbarItem"><a href="#">Home</a></div>
-        <div class="navbarItem"><a href="#footerLink">Bio</a></div>
+    <div class="navbar animacion-basica">
+        <div class="navbarItem "><a href="#">Home</a></div>
+        <div class="navbarItem "><a href="#footerLink">Bio</a></div>
         <div class="navbarItem"><a href="#realfooter">About</a></div>
         <div class="navbarItem"><a href="https://www.instagram.com/bass_addicted/" target="_blank">Media</a></div>
         <div class="navbarItem"><a href="https://www.youtube.com/@gastonca" target="_blank">Videos</a></div>
@@ -45,10 +45,10 @@
 
 
     <main>
-        <div>
+        <div class="tilt-in-left-1">  
             <img src="images/linked in.jpg" alt="Gaston Photo" height="350px">
         </div>
-        <div class="special-gothic-expanded-one-regular">
+        <div class="special-gothic-expanded-one-regular tilt-in-right-1">
             <p>Hola, mi nombre es Gaston Cazaubon. He trabajado como ingeniero de control de calidad durante los
                 últimos 7 años. Soy un profesional certificado por ISTQB y mi última experiencia fue en TRUX, una
                 empresa con sede en Boston. Durante mis 5 años en TRUX, adquirí experiencia en varias áreas de pruebas:
@@ -62,7 +62,7 @@
         </div>
     </main>
 
-    <footer id="footerLink">
+    <footer id="footerLink" class="slide-in-blurred-top">
         <div class="foot">
             <h3>
                 <ul>
@@ -101,7 +101,7 @@
             </h3>
         </div>
     </footer>
-    <article class="footer2" id="realfooter">
+    <article class="footer2 flip-scale-down-diag-1" id="realfooter">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed molestie est ante, in convallis libero ullamcorper nec. Donec enim neque, efficitur ut massa sed, pharetra ultricies mi. Praesent mollis eros at vulputate volutpat. Pellentesque nec magna sagittis quam venenatis convallis. Proin tincidunt ante ante, et luctus massa fringilla feugiat. Nullam fermentum sagittis tellus in tempus. Pellentesque ut augue maximus nibh facilisis dignissim at a orci.
     
             Mauris congue finibus malesuada. Sed condimentum pharetra dignissim. In turpis elit, venenatis et congue in, blandit et ante. Fusce laoreet mauris sapien, ac maximus erat pulvinar et. Sed ut tempor lectus, sit amet euismod dolor. In nec dui lacus. Aliquam vel mollis nibh, at interdum augue. Praesent condimentum elit pulvinar, condimentum mi at, aliquam ligula. Ut a efficitur ante, sit amet vestibulum leo. Praesent dictum purus id nulla auctor, eu mattis velit faucibus. Maecenas consequat vehicula libero pulvinar placerat. Maecenas vehicula suscipit elit, et elementum justo aliquet a. In pellentesque viverra malesuada. Nunc sit amet odio velit.
@@ -122,7 +122,7 @@
     </article>
 </body>
 
-<div class="fixedButton"><i class="fa-solid fa-comment-sms"> &nbsp;</i><a href="https://wa.me/1163538689" target="_blank">WP</a></div>
+<div class="fixedButton rotate-center"><a href="https://wa.me/1163538689" target="_blank"><img src="images/whatsapp_contacto.svg" alt=""></a></div>
 
 
 </html>
