--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Borel&family=Bungee+Spice&family=Special+Gothic+Expanded+One&family=UnifrakturMaguntia&display=swap"
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Borel&family=Bungee+Spice&family=Special+Gothic+Expanded+One&family=UnifrakturMaguntia&family=Winky+Rough:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/9746e74613.js" crossorigin="anonymous"></script>
-    <link rel="icon" href="images/favicon.ico" type="icon">
+    <link rel="icon" href="assets/img/favicon.ico" type="icon">
     <title>Tarea clase 6</title>
 </head>
 
@@ -22,10 +22,10 @@
 
 
    
-    <header class="rotate-center">
+    <header>
 
         <!--  <div>
-            <img src="images/linked in.jpg" alt="" height="100px">
+            <img src="assets/img/linked in.jpg" alt="" height="100px">
         </div> -->
         <div class="bungee-spice-regular">
             <h1>Gastón Cazaubon</h1>
@@ -40,13 +40,13 @@
         <div class="navbarItem "><a href="#footerLink">Bio</a></div>
         <div class="navbarItem"><a href="#realfooter">About</a></div>
         <div class="navbarItem"><a href="https://www.instagram.com/bass_addicted/" target="_blank">Media</a></div>
-        <div class="navbarItem"><a href="https://www.youtube.com/@gastonca" target="_blank">Videos</a></div>
+        <div class="navbarItem"><a href="contacto.html">Contacto</a></div>
     </div>
 
 
     <main>
         <div class="tilt-in-left-1">  
-            <img src="images/linked in.jpg" alt="Gaston Photo" height="350px">
+            <img src="assets/img/linked in.jpg" alt="Gaston Photo" height="350px">
         </div>
         <div class="special-gothic-expanded-one-regular tilt-in-right-1">
             <p>Hola, mi nombre es Gaston Cazaubon. He trabajado como ingeniero de control de calidad durante los
@@ -122,7 +122,7 @@
     </article>
 </body>
 
-<div class="fixedButton rotate-center"><a href="https://wa.me/1163538689" target="_blank"><img src="images/whatsapp_contacto.svg" alt=""></a></div>
+<div class="fixedButton rotate-center"><a href="https://wa.me/1163538689" target="_blank"><img src="assets/img/whatsapp_contacto.svg" alt=""></a></div>
 
 
 </html>
